helmKind/external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-proxy
  namespace: hub
spec:
  type: ExternalName
  externalName: grafana.monitoring.svc.cluster.local
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-proxy
  namespace: hub
spec:
  type: ExternalName
  externalName: prometheus-server.monitoring.svc.cluster.local
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: loki-proxy
  namespace: hub
spec:
  type: ExternalName
  externalName: loki-stack.monitoring.svc.cluster.local
  ports:
  - port: 3100
---
apiVersion: v1
kind: Service
metadata:
  name: cadvisor-proxy
  namespace: hub
spec:
  type: ExternalName
  externalName: cadvisor.monitoring.svc.cluster.local
  ports:
  - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-proxy
  namespace: hub
spec:
  type: ExternalName
  externalName: elasticsearch.logging.svc.cluster.local
  ports:
  - port: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-proxy
  namespace: hub
spec:
  type: ExternalName
  externalName: kibana.logging.svc.cluster.local
  ports:
  - port: 5601
